--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,17 @@
 *{
     margin: 0 0;
     padding: 0 0;
-    font-family: Arial, Helvetica, sans-serif;    
-    background-color: #2C3A47;
-    padding: 1%;
+    font-family: Arial, Helvetica, sans-serif;      
     font-family: 'Poppins', sans-serif;
     
     
+}
+body{
+    height: 100vh; 
+    background-image: url(../img/home-banner.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .container{    
@@ -19,7 +24,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;   
+    
+     
 }
 
 img{
@@ -31,10 +37,10 @@ img{
 }
 
 h1{
-    color: white;
+    color:rgb(4, 4, 84);
 }
 h2{
-    color: #c0392b;
+    color: red;
 }
 
 
