--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,19 @@
     
     
 }
-body{
-    height: 100vh; 
+body{    
     background-image: url(../img/home-banner.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-.container{    
+.wrapper{    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh; 
     
      
 }
