--- a/css/style.css
+++ b/css/style.css
@@ -7,72 +7,87 @@
     margin: 0 0;
     padding: 0 0;
     font-family: Arial, Helvetica, sans-serif;      
-    font-family: 'Poppins', sans-serif;
-    
+    font-family: 'Poppins', sans-serif;   
     
 }
-body{
-    height: 100vh; 
+.modal-footer a{
+    text-decoration: none;
+}
+.modal-footer a:hover{
+    text-decoration: underline;
+}
+body{    
     background-image: url(../img/home-banner.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-
-.container{    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-     
-}
-
-img{
-    width: 10%;
+.pro-pic{
+    width:10%; 
     border-radius: 50%;
 }
-.text-center{
-    text-align: center;
-}
-
-h1{
-    color:rgb(4, 4, 84);
-}
-h2{
-    color: red;
-}
-
-
-
-.intro{
-    width: 90%;
-}
-
-ul{
-    width: 40%;
-    display: flex;
-    justify-content: center;
-}
-
-ul li{
+.filter-menu li{
     list-style: none;
-   
+    display: inline-block;
+    margin-right: 1%;
+    padding: 1%; 
+    cursor: pointer;   
 }
-
-ul li a img{
-    width: 90%;
+.filter-menu li:hover,
+.filter-menu .current{
+    background-color: rgba(232, 238, 255, 1);
 }
-
-@media screen and (max-width:768px) {
-    img{
-        width: 25%;
+.filter-items {
+    background-color:rgba(232, 238, 236, 0.5);
+    padding: 2%;  
+    border-radius: 2px;     
+}
+.filter-items img{
+    width: 100%; 
+    height: auto; 
+    border-radius: 2px;      
+}
+.filter-items li,
+.filter-items li.active{
+    list-style: none;
+    display: inline-block;
+    width: 31%;
+    margin: 1%;   
+    transition: all 0.1s ease;
+    cursor: pointer;  
+    border: 5px solid rgba(89, 98, 96, 0.1);
+}
+.filter-items li.delete{
+    width: 0%;
+    margin: 0%;
+    transition: all 0.1s ease;
+}
+.social-links li{
+    display: inline-block;   
+}
+@media screen and (max-width:992px) {    
+    .filter-items{
+        text-align: center;
     }
-    .intro{
-        width:90%;
+    .filter-items li,
+    .filter-items li.active{        
+        width: 47%;
+        align-self: center; 
+    } 
+    .pro-pic{
+        width: 15%;
+    }   
+}
+@media screen and (max-width:768px){
+    .filter-items li,
+    .filter-items li.active{
+        width:98%;
     }
-    .intro h1{
-        font-size: 1.5rem;
+    .filter-items{
+        text-align: center;
+    }
+    .pro-pic{
+        width:20%;
     }
 }
 
